fix z-index

--- a/_scss/component/_card.scss
+++ b/_scss/component/_card.scss
@@ -1,11 +1,11 @@
-.card {
-    .image {
-        img {
-            margin: 0;
-        }
-    }
-}
-
 .colum {
     margin: 0 0 2em 0;
+    .card {
+        z-index: 0;
+        .image {
+            img {
+                margin: 0;
+            }
+        }
+    }
 }
