--- a/_scss/component/_sidebar.scss
+++ b/_scss/component/_sidebar.scss
@@ -15,6 +15,7 @@
 
 /* Style and "hide" the sidebar */
 .sidebar {
+  z-index:2;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -102,6 +103,7 @@ a.sidebar-nav-item:focus {
 
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
+  z-index:2;
   position: absolute;
   top:  .8rem;
   @if $reverse-layout {
@@ -123,6 +125,7 @@ a.sidebar-nav-item:focus {
 }
 
 .sidebar-toggle:before {
+  z-index:2;
   display: inline-block;
   width: 1rem;
   height: .75rem;
